versioned_docs/version-3.3/api-libf3d/structf3d_1_1options_1_1model_1_1point__sprites.md
# Structure f3d::options::model::point_sprites

![][C++]
![][public]

**Definition**: `options.h` (line 242)





## Members

* [enable](structf3d_1_1options_1_1model_1_1point__sprites.md#structf3d_1_1options_1_1model_1_1point__sprites_1aa061491718fe61349eb0a348d0295288)
* [size](structf3d_1_1options_1_1model_1_1point__sprites.md#structf3d_1_1options_1_1model_1_1point__sprites_1a1a5a95b925c2051c4923e67eb43c0db3)
* [type](structf3d_1_1options_1_1model_1_1point__sprites.md#structf3d_1_1options_1_1model_1_1point__sprites_1a66d2ab28578659e1811cc6b9c979b249)

## Public attributes

### Variable enable {/* #structf3d_1_1options_1_1model_1_1point__sprites_1aa061491718fe61349eb0a348d0295288 */}

![][public]

**Definition**: `options.h` (line 243)


```cpp
bool f3d::options::model::point_sprites::enable = false
```








**Type**: bool



### Variable size {/* #structf3d_1_1options_1_1model_1_1point__sprites_1a1a5a95b925c2051c4923e67eb43c0db3 */}

![][public]

**Definition**: `options.h` (line 244)


```cpp
double f3d::options::model::point_sprites::size = 10.0
```








**Type**: double



### Variable type {/* #structf3d_1_1options_1_1model_1_1point__sprites_1a66d2ab28578659e1811cc6b9c979b249 */}

![][public]

**Definition**: `options.h` (line 245)


```cpp
std::string f3d::options::model::point_sprites::type = "sphere"
```








**Type**: std::string



[public]: https://img.shields.io/badge/-public-brightgreen (public)
[C++]: https://img.shields.io/badge/language-C%2B%2B-blue (C++)
[const]: https://img.shields.io/badge/-const-lightblue (const)
[protected]: https://img.shields.io/badge/-protected-yellow (protected)
[static]: https://img.shields.io/badge/-static-lightgrey (static)
[private]: https://img.shields.io/badge/-private-red (private)